--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <h1>deiam</h1>
-    <h3 class="titulo3">Hijo de puta</h3>
+    <h3 class="titulo3">Hijo de puta asa</h3>
+    <h1>Deiam 2</h1>
+
+    <input type="text"> 
+    <button>Deiam 5</button>
 </body>
 
   <link rel="stylesheet" href="motor.js">
