--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    <h1>deiam</h1>
-    <h3 class="titulo3">Hijo de puta asa</h3>
-    <h1>Deiam 2</h1>
-
-    <input type="text"> 
-    <button>Deiam 5</button>
+    
+  
+  <h1>Gonzalo Albornoz Técnico Electricista</h1>
+  <h2>Analista en Sistemas en CREDICOOP</h2>
+  <h3>Desarrollador de Software en UTN.BA</h3>
+  
+  
+  
+  
 </body>
 
   <link rel="stylesheet" href="motor.js">
